--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,6 +12,10 @@ body {
 
 body {
   background: var(--mui-palette-background-default);
+  height: 100%;
+
+  display: flex;
+  flex-direction: column;
 }
 
 a {
@@ -19,7 +23,13 @@ a {
   text-decoration: none;
 }
 
+main {
+  flex-grow: 1;
+  display: flex;
+}
+
 html {
+  height: 100svh;
   font-size: 10px;
 }
 
